Fix overflow-x of body

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,10 @@ body,
   scrollbar-width: thin;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 h1 {
   font-size: 0.9375rem;
   font-weight: bold;
